objects/copado__Artifact_Version__c.object
<CustomObject>
    <fields>
        <fullName>copado__Artifact__c</fullName>
        <label>Artifact</label>
        <referenceTo>copado__Artifact__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The package version’s branch. Package version content is stored in this branch in the given repository. You may reach your repository information from the parent artifact record.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Is_released__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Package versions are being created as beta and you can promote them to be released. When a version is released this checkbox will be checked.</inlineHelpText>
        <label>Is released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Package_Version_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Package version id is in use in order to specify ancestry among package versions and for promoting a package version.</inlineHelpText>
        <label>Package Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Production_Installation_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this URL in order to install this package in a production environment.</inlineHelpText>
        <label>Production Installation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release_Status__c</fullName>
        <formula>TEXT(copado__Release__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sandbox_Installation_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://test.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;https://test.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this URL in order to install this package in a sandbox environment.</inlineHelpText>
        <label>Sandbox Installation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Subscriber_Version_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>In order to install a package to a Salesforce environment, installation URL requires a subscriber Id. Please refer to installation URLs.</inlineHelpText>
        <label>Subscriber Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The package version’s tag. Package version content is stored in this tag in the given repository. Tags are created for each version number. Version with the same version number may overwrite each other. Try to keep your version numbers unique.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The description of the package version</inlineHelpText>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>the name of the package version which entered by user while version creation.</inlineHelpText>
        <label>Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <formula>copado__Release__r.copado__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The version number of the package version. Must be in major.minor.patch.build format.</inlineHelpText>
        <label>Version number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__View_In_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c +  copado__Version__c,
			IF(
				CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c,&apos;[TAG_NAME]&apos;),
				SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c,&apos;[TAG_NAME]&apos;,copado__Version__c),
				copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c + copado__Version__c
			)
		),
	&apos;&apos;), 
	copado__Version__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View In Git</label>
        <type>Text</type>
    </fields>
    <label>Artifact Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Artifact Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifact Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>